--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-scripts": "3.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
